istio/istio-tutorial-master/customer/kubernetes/LoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  type: LoadBalancer  # use LoadBalancer as type here
  ports:
  - name: http
    port: 8080
  selector:
    app: customer
