istio/istio-tutorial-master/customer/kubernetes/Nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  type: NodePort  # use NodePort as type here
  ports:
  - name: http
    port: 8080
  selector:
    app: customer
