istio/istio-tutorial-master/customer/kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - host: customer.info
     http:
       paths:
       - path: /
         backend:
           serviceName: customer
           servicePort: 8080
